# diplom_n

./: .env  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py
core/migrations/: 0001_initial.py
django_n/: asgi.py  settings.py  urls.py  wsgi.py
