[tool.poetry]
name = "django-n"
version = "0.1.0"
description = ""
authors = ["mari <altysheva_maria@mail.ru>"]
readme = "README.md"
packages = [{include = "django_n"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
